Fix delete + front

--- a/public/auth/login.html
+++ b/public/auth/login.html
@@ -8,10 +8,23 @@
         body { font-family: Arial, sans-serif; text-align: center; }
         .container { width: 300px; margin: 100px auto; padding: 20px; border: 1px solid #ddd; border-radius: 5px; }
         input { width: 100%; padding: 10px; margin: 10px 0; }
-        button { width: 100%; padding: 10px; background: blue; color: white; border: none; }
+        button { width: 100%; padding: 10px; background: blue; color: white; border: none; cursor: pointer; }
+        .back-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            padding: 10px 15px;
+            background: gray;
+            color: white;
+            border: none;
+            cursor: pointer;
+            width: fit-content;
+            display: inline-block;
+        }
     </style>
 </head>
 <body>
+<button class="back-button" onclick="window.location.href='http://localhost:3000'">&#8592; Home</button>
 <div class="container">
     <h2>Login</h2>
     <form action="/auth/login" method="POST">
