--- a/public/addProduct.html
+++ b/public/addProduct.html
@@ -5,28 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Product</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .container {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+
+        label {
+            font-weight: bold;
+            margin-top: 10px;
+            display: block;
+        }
+
+        input, textarea {
+            width: 100%;
+            padding: 10px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        button {
+            width: 100%;
+            background: #007BFF;
+            color: white;
+            padding: 12px;
+            border: none;
+            border-radius: 5px;
+            font-size: 18px;
+            cursor: pointer;
+            margin-top: 15px;
+            transition: background 0.3s ease;
+        }
+
+        button:hover {
+            background: #0056b3;
+        }
+    </style>
 </head>
 <body>
-<h1>Add a New Product</h1>
-<form action="/products/add" method="POST">
-    <label for="name">Product Name:</label>
-    <input type="text" id="name" name="name" required>
 
-    <label for="price">Price:</label>
-    <input type="number" id="price" name="price" required>
+<div class="container">
+    <h1>Add a New Product</h1>
+    <form id="addProductForm">
+        <label for="name">Product Name:</label>
+        <input type="text" id="name" name="name" required>
 
-    <label for="description">Description:</label>
-    <textarea id="description" name="description" required></textarea>
+        <label for="price">Price:</label>
+        <input type="number" id="price" name="price" required>
 
-    <label for="category">Category:</label>
-    <input type="text" id="category" name="category" required>
+        <label for="description">Description:</label>
+        <textarea id="description" name="description" required></textarea>
 
-    <label for="imageUrl">Image URL:</label>
-    <input type="text" id="imageUrl" name="imageUrl" required>
+        <label for="category">Category:</label>
+        <input type="text" id="category" name="category" required>
 
-    <button type="submit">Add Product</button>
-</form>
+        <label for="imageUrl">Image URL:</label>
+        <input type="text" id="imageUrl" name="imageUrl" required>
+
+        <button type="submit">Add Product</button>
+    </form>
+</div>
 
 <script src="addProduct.js"></script>
+
 </body>
 </html>
