--- a/public/products.html
+++ b/public/products.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Details</title>
-    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-<button onclick="window.location.href='index.html'">Back to Home</button>
-<div id="product-details">
+<body style="font-family: Arial, sans-serif; margin: 20px; text-align: center; background-color: #f8f9fa;">
+
+<button onclick="window.location.href='index.html'"
+        style="padding: 10px 15px; font-size: 16px; border: none; background-color: #007BFF; color: white; cursor: pointer; border-radius: 5px; margin-bottom: 20px;">
+    Back to Home
+</button>
+
+<div id="product-details"
+     style="border: 1px solid #ccc; padding: 15px; max-width: 400px; margin: auto; background: white; border-radius: 8px; box-shadow: 2px 2px 10px rgba(0,0,0,0.1);">
     <!-- Product details will be loaded here -->
 </div>
 
