--- a/public/profile.html
+++ b/public/profile.html
@@ -33,7 +33,7 @@
             </button>
 
             <!-- Update Form (Initially Hidden) -->
-            <div id="update-form" style="display: none; background: white; padding: 20px; margin-top: 10px; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);">
+            <form id="update-form" style="display: none; background: white; padding: 20px; margin-top: 10px; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);">
                 <h3>Update Credentials</h3>
                 <label for="email">New Email:</label>
                 <input type="email" id="emailNew" placeholder="Enter new email" style="width: 100%; padding: 10px; margin: 10px 0; border: 1px solid #ccc; border-radius: 5px;">
@@ -44,7 +44,7 @@
                 <button type="submit" style="background-color: blue; color: white; border: none; padding: 10px 15px; border-radius: 5px; font-size: 16px; cursor: pointer;">
                     Save Changes
                 </button>
-            </div>
+            </form>
         </div>
     </div>
 
